force-app/main/default/objects/NF_Submission_Log_Key__c/NF_Submission_Log_Key__c.object-meta.xml
<CustomObject>
    <description>Hidden org-level key material used to decrypt NativeForms submission-log detail in Salesforce.</description>
    <label>NF Submission Log Key</label>
    <nameField>
        <label>Org Id</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NF Submission Log Keys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>