force-app/main/default/objects/NF_Submission_Log_Key__c/fields/Key_Version__c.field-meta.xml
<CustomField>
    <fullName>Key_Version__c</fullName>
    <description>Version label stored with submission-log crypto material.</description>
    <label>Key Version</label>
    <length>40</length>
    <type>Text</type>
</CustomField>