force-app/main/default/objects/NF_Submission_Log_Key__c/fields/Private_Key__c.field-meta.xml
<CustomField>
    <fullName>Private_Key__c</fullName>
    <description>Base64-encoded PKCS8 private key used by Salesforce org users to decrypt submission-log detail client-side.</description>
    <label>Private Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>