force-app/main/default/objects/NF_Submission_Log_Key__c/fields/Public_Key__c.field-meta.xml
<CustomField>
    <fullName>Public_Key__c</fullName>
    <description>Base64-encoded SPKI public key synced to AWS for submission-log encryption.</description>
    <label>Public Key</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>