force-app/main/default/objects/NF_Submission_Log_Key__c/fields/Sealed_Log_Data__c.field-meta.xml
<CustomField>
    <fullName>Sealed_Log_Data__c</fullName>
    <description>Package-internal sealed data used by Apex to unlock submission-log detail for authorized org users.</description>
    <label>Sealed Log Data</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>